--- a/frontend/templates/teacher_dashboard.html
+++ b/frontend/templates/teacher_dashboard.html
@@ -957,11 +957,11 @@
      class="flex-1 text-center py-2 rounded bg-purple-600 hover:bg-purple-700 text-white edit">
     Редактировать
   </a>
-  <a href="#"
-     class="flex-1 text-center py-2 rounded bg-red-600 hover:bg-red-700 text-white">
-    Удалить
-  </a>
-</div>
+  <a href="#"␊
+     class="flex-1 text-center py-2 rounded bg-red-600 hover:bg-red-700 text-white delete">
+    Удалить␊
+  </a>␊
+</div>␊
 
         </div>`;
       document.getElementById('teacher-courses').appendChild(article);
